library/src/libqtreewidget.h

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QSize QSize;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QVariant QVariant;
QTreeWidgetItem* QTreeWidgetItem_new();
QTreeWidgetItem* QTreeWidgetItem_new2(libqt_list /* of libqt_string */ strings);
QTreeWidgetItem* QTreeWidgetItem_new3(QTreeWidget* treeview);
QTreeWidgetItem* QTreeWidgetItem_new4(QTreeWidget* treeview, libqt_list /* of libqt_string */ strings);
QTreeWidgetItem* QTreeWidgetItem_new5(QTreeWidget* treeview, QTreeWidgetItem* after);
QTreeWidgetItem* QTreeWidgetItem_new6(QTreeWidgetItem* parent);
QTreeWidgetItem* QTreeWidgetItem_new7(QTreeWidgetItem* parent, libqt_list /* of libqt_string */ strings);
QTreeWidgetItem* QTreeWidgetItem_new8(QTreeWidgetItem* parent, QTreeWidgetItem* after);
QTreeWidgetItem* QTreeWidgetItem_new9(QTreeWidgetItem* other);
QTreeWidgetItem* QTreeWidgetItem_new10(int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new11(libqt_list /* of libqt_string */ strings, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new12(QTreeWidget* treeview, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new13(QTreeWidget* treeview, libqt_list /* of libqt_string */ strings, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new14(QTreeWidget* treeview, QTreeWidgetItem* after, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new15(QTreeWidgetItem* parent, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new16(QTreeWidgetItem* parent, libqt_list /* of libqt_string */ strings, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_new17(QTreeWidgetItem* parent, QTreeWidgetItem* after, int typeVal);
QTreeWidgetItem* QTreeWidgetItem_Clone(const QTreeWidgetItem* self);
QTreeWidget* QTreeWidgetItem_TreeWidget(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetSelected(QTreeWidgetItem* self, bool selectVal);
bool QTreeWidgetItem_IsSelected(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetHidden(QTreeWidgetItem* self, bool hide);
bool QTreeWidgetItem_IsHidden(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetExpanded(QTreeWidgetItem* self, bool expand);
bool QTreeWidgetItem_IsExpanded(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetFirstColumnSpanned(QTreeWidgetItem* self, bool span);
bool QTreeWidgetItem_IsFirstColumnSpanned(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetDisabled(QTreeWidgetItem* self, bool disabled);
bool QTreeWidgetItem_IsDisabled(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetChildIndicatorPolicy(QTreeWidgetItem* self, int policy);
int QTreeWidgetItem_ChildIndicatorPolicy(const QTreeWidgetItem* self);
int QTreeWidgetItem_Flags(const QTreeWidgetItem* self);
void QTreeWidgetItem_SetFlags(QTreeWidgetItem* self, int flags);
libqt_string QTreeWidgetItem_Text(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetText(QTreeWidgetItem* self, int column, libqt_string text);
QIcon* QTreeWidgetItem_Icon(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetIcon(QTreeWidgetItem* self, int column, QIcon* icon);
libqt_string QTreeWidgetItem_StatusTip(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetStatusTip(QTreeWidgetItem* self, int column, libqt_string statusTip);
libqt_string QTreeWidgetItem_ToolTip(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetToolTip(QTreeWidgetItem* self, int column, libqt_string toolTip);
libqt_string QTreeWidgetItem_WhatsThis(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetWhatsThis(QTreeWidgetItem* self, int column, libqt_string whatsThis);
QFont* QTreeWidgetItem_Font(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetFont(QTreeWidgetItem* self, int column, QFont* font);
int QTreeWidgetItem_TextAlignment(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetTextAlignment(QTreeWidgetItem* self, int column, int alignment);
void QTreeWidgetItem_SetTextAlignment2(QTreeWidgetItem* self, int column, int alignment);
void QTreeWidgetItem_SetTextAlignment3(QTreeWidgetItem* self, int column, int alignment);
QBrush* QTreeWidgetItem_Background(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetBackground(QTreeWidgetItem* self, int column, QBrush* brush);
QBrush* QTreeWidgetItem_Foreground(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetForeground(QTreeWidgetItem* self, int column, QBrush* brush);
int QTreeWidgetItem_CheckState(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetCheckState(QTreeWidgetItem* self, int column, int state);
QSize* QTreeWidgetItem_SizeHint(const QTreeWidgetItem* self, int column);
void QTreeWidgetItem_SetSizeHint(QTreeWidgetItem* self, int column, QSize* size);
QVariant* QTreeWidgetItem_Data(const QTreeWidgetItem* self, int column, int role);
void QTreeWidgetItem_SetData(QTreeWidgetItem* self, int column, int role, QVariant* value);
bool QTreeWidgetItem_OperatorLesser(const QTreeWidgetItem* self, QTreeWidgetItem* other);
void QTreeWidgetItem_Read(QTreeWidgetItem* self, QDataStream* in);
void QTreeWidgetItem_Write(const QTreeWidgetItem* self, QDataStream* out);
void QTreeWidgetItem_OperatorAssign(QTreeWidgetItem* self, QTreeWidgetItem* other);
QTreeWidgetItem* QTreeWidgetItem_Parent(const QTreeWidgetItem* self);
QTreeWidgetItem* QTreeWidgetItem_Child(const QTreeWidgetItem* self, int index);
int QTreeWidgetItem_ChildCount(const QTreeWidgetItem* self);
int QTreeWidgetItem_ColumnCount(const QTreeWidgetItem* self);
int QTreeWidgetItem_IndexOfChild(const QTreeWidgetItem* self, QTreeWidgetItem* child);
void QTreeWidgetItem_AddChild(QTreeWidgetItem* self, QTreeWidgetItem* child);
void QTreeWidgetItem_InsertChild(QTreeWidgetItem* self, int index, QTreeWidgetItem* child);
void QTreeWidgetItem_RemoveChild(QTreeWidgetItem* self, QTreeWidgetItem* child);
QTreeWidgetItem* QTreeWidgetItem_TakeChild(QTreeWidgetItem* self, int index);
void QTreeWidgetItem_AddChildren(QTreeWidgetItem* self, libqt_list /* of QTreeWidgetItem* */ children);
void QTreeWidgetItem_InsertChildren(QTreeWidgetItem* self, int index, libqt_list /* of QTreeWidgetItem* */ children);
libqt_list /* of QTreeWidgetItem* */ QTreeWidgetItem_TakeChildren(QTreeWidgetItem* self);
int QTreeWidgetItem_Type(const QTreeWidgetItem* self);
void QTreeWidgetItem_SortChildren(QTreeWidgetItem* self, int column, int order);
void QTreeWidgetItem_EmitDataChanged(QTreeWidgetItem* self);