src/libqtreewidget.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QTreeWidgetItem__ItemType
{
	Type = 0,
	UserType = 1000,
}
[AllowDuplicates]
public enum QTreeWidgetItem__ChildIndicatorPolicy
{
	ShowIndicator = 0,
	DontShowIndicator = 1,
	DontShowIndicatorWhenChildless = 2,
}
public struct QTreeWidgetItem
{
	[LinkName("QTreeWidgetItem_new")]
	public static extern void* QTreeWidgetItem_new();
	[LinkName("QTreeWidgetItem_new2")]
	public static extern void* QTreeWidgetItem_new2(char8[][] strings);
	[LinkName("QTreeWidgetItem_new3")]
	public static extern void* QTreeWidgetItem_new3(QTreeWidget treeview);
	[LinkName("QTreeWidgetItem_new4")]
	public static extern void* QTreeWidgetItem_new4(QTreeWidget treeview, char8[][] strings);
	[LinkName("QTreeWidgetItem_new5")]
	public static extern void* QTreeWidgetItem_new5(QTreeWidget treeview, QTreeWidgetItem after);
	[LinkName("QTreeWidgetItem_new6")]
	public static extern void* QTreeWidgetItem_new6(QTreeWidgetItem parent);
	[LinkName("QTreeWidgetItem_new7")]
	public static extern void* QTreeWidgetItem_new7(QTreeWidgetItem parent, char8[][] strings);
	[LinkName("QTreeWidgetItem_new8")]
	public static extern void* QTreeWidgetItem_new8(QTreeWidgetItem parent, QTreeWidgetItem after);
	[LinkName("QTreeWidgetItem_new9")]
	public static extern void* QTreeWidgetItem_new9(QTreeWidgetItem other);
	[LinkName("QTreeWidgetItem_new10")]
	public static extern void* QTreeWidgetItem_new10(int32 typeVal);
	[LinkName("QTreeWidgetItem_new11")]
	public static extern void* QTreeWidgetItem_new11(char8[][] strings, int32 typeVal);
	[LinkName("QTreeWidgetItem_new12")]
	public static extern void* QTreeWidgetItem_new12(QTreeWidget treeview, int32 typeVal);
	[LinkName("QTreeWidgetItem_new13")]
	public static extern void* QTreeWidgetItem_new13(QTreeWidget treeview, char8[][] strings, int32 typeVal);
	[LinkName("QTreeWidgetItem_new14")]
	public static extern void* QTreeWidgetItem_new14(QTreeWidget treeview, QTreeWidgetItem after, int32 typeVal);
	[LinkName("QTreeWidgetItem_new15")]
	public static extern void* QTreeWidgetItem_new15(QTreeWidgetItem parent, int32 typeVal);
	[LinkName("QTreeWidgetItem_new16")]
	public static extern void* QTreeWidgetItem_new16(QTreeWidgetItem parent, char8[][] strings, int32 typeVal);
	[LinkName("QTreeWidgetItem_new17")]
	public static extern void* QTreeWidgetItem_new17(QTreeWidgetItem parent, QTreeWidgetItem after, int32 typeVal);
	[LinkName("QTreeWidgetItem_Clone")]
	public static extern QTreeWidgetItem QTreeWidgetItem_Clone(void* c_this);
	[LinkName("QTreeWidgetItem_TreeWidget")]
	public static extern QTreeWidget QTreeWidgetItem_TreeWidget(void* c_this);
	[LinkName("QTreeWidgetItem_SetSelected")]
	public static extern void QTreeWidgetItem_SetSelected(void* c_this, bool selectVal);
	[LinkName("QTreeWidgetItem_IsSelected")]
	public static extern bool QTreeWidgetItem_IsSelected(void* c_this);
	[LinkName("QTreeWidgetItem_SetHidden")]
	public static extern void QTreeWidgetItem_SetHidden(void* c_this, bool hide);
	[LinkName("QTreeWidgetItem_IsHidden")]
	public static extern bool QTreeWidgetItem_IsHidden(void* c_this);
	[LinkName("QTreeWidgetItem_SetExpanded")]
	public static extern void QTreeWidgetItem_SetExpanded(void* c_this, bool expand);
	[LinkName("QTreeWidgetItem_IsExpanded")]
	public static extern bool QTreeWidgetItem_IsExpanded(void* c_this);
	[LinkName("QTreeWidgetItem_SetFirstColumnSpanned")]
	public static extern void QTreeWidgetItem_SetFirstColumnSpanned(void* c_this, bool span);
	[LinkName("QTreeWidgetItem_IsFirstColumnSpanned")]
	public static extern bool QTreeWidgetItem_IsFirstColumnSpanned(void* c_this);
	[LinkName("QTreeWidgetItem_SetDisabled")]
	public static extern void QTreeWidgetItem_SetDisabled(void* c_this, bool disabled);
	[LinkName("QTreeWidgetItem_IsDisabled")]
	public static extern bool QTreeWidgetItem_IsDisabled(void* c_this);
	[LinkName("QTreeWidgetItem_SetChildIndicatorPolicy")]
	public static extern void QTreeWidgetItem_SetChildIndicatorPolicy(void* c_this, int64 policy);
	[LinkName("QTreeWidgetItem_ChildIndicatorPolicy")]
	public static extern int64 QTreeWidgetItem_ChildIndicatorPolicy(void* c_this);
	[LinkName("QTreeWidgetItem_Flags")]
	public static extern int64 QTreeWidgetItem_Flags(void* c_this);
	[LinkName("QTreeWidgetItem_SetFlags")]
	public static extern void QTreeWidgetItem_SetFlags(void* c_this, int64 flags);
	[LinkName("QTreeWidgetItem_Text")]
	public static extern char8[] QTreeWidgetItem_Text(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetText")]
	public static extern void QTreeWidgetItem_SetText(void* c_this, int32 column, char8[] text);
	[LinkName("QTreeWidgetItem_Icon")]
	public static extern QIcon QTreeWidgetItem_Icon(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetIcon")]
	public static extern void QTreeWidgetItem_SetIcon(void* c_this, int32 column, QIcon icon);
	[LinkName("QTreeWidgetItem_StatusTip")]
	public static extern char8[] QTreeWidgetItem_StatusTip(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetStatusTip")]
	public static extern void QTreeWidgetItem_SetStatusTip(void* c_this, int32 column, char8[] statusTip);
	[LinkName("QTreeWidgetItem_ToolTip")]
	public static extern char8[] QTreeWidgetItem_ToolTip(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetToolTip")]
	public static extern void QTreeWidgetItem_SetToolTip(void* c_this, int32 column, char8[] toolTip);
	[LinkName("QTreeWidgetItem_WhatsThis")]
	public static extern char8[] QTreeWidgetItem_WhatsThis(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetWhatsThis")]
	public static extern void QTreeWidgetItem_SetWhatsThis(void* c_this, int32 column, char8[] whatsThis);
	[LinkName("QTreeWidgetItem_Font")]
	public static extern QFont QTreeWidgetItem_Font(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetFont")]
	public static extern void QTreeWidgetItem_SetFont(void* c_this, int32 column, QFont font);
	[LinkName("QTreeWidgetItem_TextAlignment")]
	public static extern int32 QTreeWidgetItem_TextAlignment(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetTextAlignment")]
	public static extern void QTreeWidgetItem_SetTextAlignment(void* c_this, int32 column, int32 alignment);
	[LinkName("QTreeWidgetItem_SetTextAlignment2")]
	public static extern void QTreeWidgetItem_SetTextAlignment2(void* c_this, int32 column, int64 alignment);
	[LinkName("QTreeWidgetItem_SetTextAlignment3")]
	public static extern void QTreeWidgetItem_SetTextAlignment3(void* c_this, int32 column, int64 alignment);
	[LinkName("QTreeWidgetItem_Background")]
	public static extern QBrush QTreeWidgetItem_Background(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetBackground")]
	public static extern void QTreeWidgetItem_SetBackground(void* c_this, int32 column, QBrush brush);
	[LinkName("QTreeWidgetItem_Foreground")]
	public static extern QBrush QTreeWidgetItem_Foreground(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetForeground")]
	public static extern void QTreeWidgetItem_SetForeground(void* c_this, int32 column, QBrush brush);
	[LinkName("QTreeWidgetItem_CheckState")]
	public static extern int64 QTreeWidgetItem_CheckState(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetCheckState")]
	public static extern void QTreeWidgetItem_SetCheckState(void* c_this, int32 column, int64 state);
	[LinkName("QTreeWidgetItem_SizeHint")]
	public static extern QSize QTreeWidgetItem_SizeHint(void* c_this, int32 column);
	[LinkName("QTreeWidgetItem_SetSizeHint")]
	public static extern void QTreeWidgetItem_SetSizeHint(void* c_this, int32 column, QSize size);
	[LinkName("QTreeWidgetItem_Data")]
	public static extern QVariant QTreeWidgetItem_Data(void* c_this, int32 column, int32 role);
	[LinkName("QTreeWidgetItem_SetData")]
	public static extern void QTreeWidgetItem_SetData(void* c_this, int32 column, int32 role, QVariant value);
	[LinkName("QTreeWidgetItem_OperatorLesser")]
	public static extern bool QTreeWidgetItem_OperatorLesser(void* c_this, QTreeWidgetItem other);
	[LinkName("QTreeWidgetItem_Read")]
	public static extern void QTreeWidgetItem_Read(void* c_this, QDataStream _in);
	[LinkName("QTreeWidgetItem_Write")]
	public static extern void QTreeWidgetItem_Write(void* c_this, QDataStream _out);
	[LinkName("QTreeWidgetItem_OperatorAssign")]
	public static extern void QTreeWidgetItem_OperatorAssign(void* c_this, QTreeWidgetItem other);
	[LinkName("QTreeWidgetItem_Parent")]
	public static extern QTreeWidgetItem QTreeWidgetItem_Parent(void* c_this);
	[LinkName("QTreeWidgetItem_Child")]
	public static extern QTreeWidgetItem QTreeWidgetItem_Child(void* c_this, int32 index);
	[LinkName("QTreeWidgetItem_ChildCount")]
	public static extern int32 QTreeWidgetItem_ChildCount(void* c_this);
	[LinkName("QTreeWidgetItem_ColumnCount")]
	public static extern int32 QTreeWidgetItem_ColumnCount(void* c_this);
	[LinkName("QTreeWidgetItem_IndexOfChild")]
	public static extern int32 QTreeWidgetItem_IndexOfChild(void* c_this, QTreeWidgetItem child);
	[LinkName("QTreeWidgetItem_AddChild")]
	public static extern void QTreeWidgetItem_AddChild(void* c_this, QTreeWidgetItem child);
	[LinkName("QTreeWidgetItem_InsertChild")]
	public static extern void QTreeWidgetItem_InsertChild(void* c_this, int32 index, QTreeWidgetItem child);
	[LinkName("QTreeWidgetItem_RemoveChild")]
	public static extern void QTreeWidgetItem_RemoveChild(void* c_this, QTreeWidgetItem child);
	[LinkName("QTreeWidgetItem_TakeChild")]
	public static extern QTreeWidgetItem QTreeWidgetItem_TakeChild(void* c_this, int32 index);
	[LinkName("QTreeWidgetItem_AddChildren")]
	public static extern void QTreeWidgetItem_AddChildren(void* c_this, QTreeWidgetItem[] children);
	[LinkName("QTreeWidgetItem_InsertChildren")]
	public static extern void QTreeWidgetItem_InsertChildren(void* c_this, int32 index, QTreeWidgetItem[] children);
	[LinkName("QTreeWidgetItem_TakeChildren")]
	public static extern QTreeWidgetItem[] QTreeWidgetItem_TakeChildren(void* c_this);
	[LinkName("QTreeWidgetItem_Type")]
	public static extern int32 QTreeWidgetItem_Type(void* c_this);
	[LinkName("QTreeWidgetItem_SortChildren")]
	public static extern void QTreeWidgetItem_SortChildren(void* c_this, int32 column, int64 order);
	[LinkName("QTreeWidgetItem_EmitDataChanged")]
	public static extern void QTreeWidgetItem_EmitDataChanged(void* c_this);
}
